# Freenove_Basic_Starter_Kit_for_ESP32

Rust/: Cargo.toml
Rust/examples/: 01-1-blink.rs  02-1-button_and_led.rs  02-2-table_lamp.rs  03-1-flowing_light.rs  04-1-breathing_light.rs  04-2-floawing_light2.rs  05-1-rgb_led.rs  05-2-gradient-color-light.rs  06-1-doorbell.rs  06-2-alertor.rs  07-1-serial_printer.rs  07-2-serial_rw.rs  08-1-adc_dac.rs  10-1-soft_light.rs  11-1-night_lamp.rs  12-1-thermometer.rs
Rust/examples/esp32-01-1-blink/: Cargo.toml
