[package]
name = "esp32-01-1-blink"
version = "0.1.0"
authors = ["Tasuku Suzuki <stasuku@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.16.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
